syntax = "proto3";

message BackendRecordHeartbeatReport
{
    optional uint32 record_flag = 1;
    optional uint32 sys_work_sta = 21;
    optional uint32 chg_reign_sta = 22;
    optional uint32 pcs_work_sta = 23;
    optional uint32 fan_state = 24;
    optional uint32 ems_work_sta = 25;
    optional uint32 c20_in_type = 41;
    optional uint32 work_5p8_mode = 42;
    optional uint32 ac_in_freq = 43;
    optional uint32 ems_max_avail_num = 44;
    optional uint32 ems_open_bms_idx = 45;
    optional uint32 ems_para_vol_min = 46;
    optional uint32 ems_para_vol_max = 47;
    optional uint32 ac_out_freq = 48;
    optional uint32 pcs_dc_err_code = 49;
    optional uint32 pcs_ac_err_code = 50;
    optional uint32 lv_pv_err_code = 51;
    optional uint32 hv_pv_err_code = 52;
    optional uint32 ads_err_code = 53;
    optional float bat_vol = 61;
    optional float bat_amp = 62;
    optional float bms_input_watts = 63;
    optional float bms_output_watts = 64;
    optional float out_usb1_vol = 65;
    optional float out_usb1_amp = 66;
    optional float out_usb2_vol = 67;
    optional float out_usb2_amp = 68;
    optional float out_typec1_vol = 69;
    optional float out_typec1_amp = 70;
    optional float out_typec2_vol = 71;
    optional float out_typec2_amp = 72;
    optional float out_ads_vol = 73;
    optional float out_ads_amp = 74;
    optional float out_ac_l1_1_vol = 75;
    optional float out_ac_l1_1_amp = 76;
    optional float out_ac_l1_2_vol = 77;
    optional float out_ac_l1_2_amp = 78;
    optional float out_ac_l2_1_vol = 79;
    optional float out_ac_l2_1_amp = 80;
    optional float out_ac_l2_2_vol = 81;
    optional float out_ac_l2_2_amp = 82;
    optional float out_ac_tt_vol = 83;
    optional float out_ac_tt_amp = 84;
    optional float out_ac_l14_vol = 85;
    optional float out_ac_l14_amp = 86;
    optional float out_ac_5p8_vol = 87;
    optional float out_ac_5p8_amp = 88;
    optional float in_ac_5p8_vol = 89;
    optional float in_ac_5p8_amp = 90;
    optional float in_ac_c20_vol = 91;
    optional float in_ac_c20_amp = 92;
    optional float in_lv_mppt_vol = 93;
    optional float in_lv_mppt_amp = 94;
    optional float in_hv_mppt_vol = 95;
    optional float in_hv_mppt_amp = 96;
    optional float pcs_dc_temp = 97;
    optional float pcs_ac_temp = 98;
    optional float mppt_lv_temp = 99;
    optional float mppt_hv_temp = 100;
    optional int32 pd_temp = 101;
    optional float ev_max_charger_cur = 102;
}
